# midi-router

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
config/: devices.json  map.json
src/: config.rs  device.rs  main.rs  mapping.rs  osc_listener.rs  processor.rs  router.rs  session_manager.rs
